--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Is this Nacho edible?</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of Ignacio Tartavull <strong>(human nacho)</strong> or <strong>edible nachos</strong> or <strong> both!</strong>
     </p>
     <div class='content'>
       <div class='no-display'>
